another major changes regarding ampl